Apply alpha premultiplication before color conversion

Add version of conversion tests with and without premultiplied
alpha.

Bug: 833388
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel
Change-Id: I9d269e5867fee62ed70b2f3579a4c4bf524a7103
Reviewed-on: https://chromium-review.googlesource.com/1014631
Reviewed-by: enne <enne@chromium.org>
Commit-Queue: ccameron <ccameron@chromium.org>
Cr-Commit-Position: refs/heads/master@{#551476}
Former-commit-id: 827e9487da3870a1e9ef144095a1bf11582d7787